--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </div>
 <nav class="menu">
     <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
+        <li><a href="index.html">About</a></li>
+        <li><a href="work.html">Work</a></li>
     </ul>
 </nav>
 </header>
@@ -27,21 +27,18 @@
 <h3>About</h3>
 
 <p><strong>・活動</strong></p>
-<div class="contents">
-<p><strong>github</strong></p>
-<p><a href="https://github.com/CoffCookie" target="_blank">https://github.com/CoffCookie</a></p>
+    <div class="contents">
+        <p><strong>github</strong></p>
+        <p><a href="https://github.com/CoffCookie" target="_blank">https://github.com/CoffCookie</a></p>
 
-<p><strong>Qiita</strong></p>
-<p><a href="https://qiita.com/clipbord" target="_blank">https://qiita.com/clipbord</a></p>
+        <p><strong>Qiita</strong></p>
+        <p><a href="https://qiita.com/clipbord" target="_blank">https://qiita.com/clipbord</a></p>
+    </div>
 </div>
-</div>
-
-
 <footer>
 </footer>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!-- 後でどう使うか調査　-->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
